k8s/apps/sdr-enthusiasts/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sdr-enthusiasts
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
