k8s/apps/sdr-enthusiasts/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        # https://github.com/sdr-enthusiasts/docker-adsb-ultrafeeder
        - name: ultrafeeder
          image: ghcr.io/sdr-enthusiasts/docker-adsb-ultrafeeder:telegraf@sha256:fd6eb5544e5a8e8991c518cb3edc0712e500addb3bc5e7b4ccc0a0c795920e66
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: beast-output
              containerPort: 30005
              protocol: TCP
          volumeMounts:
            - name: ultrafeeder-globe-history
              mountPath: /var/globe_history
            - name: ultrafeeder-graphs1090
              mountPath: /var/lib/collectd
            - name: dev-bus-usb
              mountPath: /dev/bus/usb
              readOnly: true
            - name: proc-diskstats
              mountPath: /proc/diskstats
              readOnly: true
            - name: sys-class-thermal-thermal-zone2
              mountPath: /sys/class/thermal/thermal_zone0
              readOnly: true
            - name: run
              mountPath: /run
            - name: tmp
              mountPath: /tmp
            - name: var-log
              mountPath: /var/log
          securityContext:
            privileged: true

        # https://github.com/sdr-enthusiasts/docker-flightradar24
        - name: fr24feed
          image: ghcr.io/sdr-enthusiasts/docker-flightradar24@sha256:3e0fbd0274eb9d10f5506cd8bcbff5714476ae39b571400153f9aab264017b34
          ports:
            - name: http
              containerPort: 8754
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            # /etc/fr24feed.ini に書き込みする
            readOnlyRootFilesystem: false
      volumes:
        - name: ultrafeeder-globe-history
          hostPath:
            path: /mnt/local/sdr-enthusiasts/ultrafeeder/globe_history
            type: DirectoryOrCreate
        - name: ultrafeeder-graphs1090
          hostPath:
            path: /mnt/local/sdr-enthusiasts/ultrafeeder/graphs1090
            type: DirectoryOrCreate
        - name: dev-bus-usb
          hostPath:
            path: /dev/bus/usb
            type: Directory
        - name: proc-diskstats
          hostPath:
            path: /proc/diskstats
            type: File
        - name: sys-class-thermal-thermal-zone2
          hostPath:
            path: /sys/class/thermal/thermal_zone2
            type: Directory
        - name: run
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: var-log
          emptyDir: {}
      restartPolicy: Always
      dnsConfig:
        searches: []
      securityContext:
        seccompProfile:
          type: RuntimeDefault
