k8s/apps/sdr-enthusiasts/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ultrafeeder

spec:
  selector:
    app: default
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
